[package]
name = "actor-example"
version = "0.1.0"
authors = ["metalwarrior665 <lukaskrivka@gmail.com>"]
edition = "2018"

[profile.dev]
opt-level = "s" 

[dependencies]
reqwest = {version = "^0.11", features = ["gzip", "blocking"]}
serde = { version = "^1", features = ["derive"] }
serde_json = "^1" 
